--- a/templates/home.html
+++ b/templates/home.html
@@ -123,10 +123,10 @@
                                 </div>
                                 <div class="col-md-12 mb-2">
                                     <p>
-                                        Don't have any VCF files lying around? Totally understandable, you can download some <a href="vcf.zip" download>here</a>.
+                                        Don't have any VCF files lying around? Totally understandable, you can download some <a href="samples" download>here</a>.
                                     </p>
                                     <p>
-                                    If you are supplying your own VCF file, please make sure there is a column header row that matches the column headers in our  <a href="vcf.zip" download>sample files</a>.
+                                    If you are supplying your own VCF file, please make sure there is a column header row that matches the column headers in our  <a href="samples" download>sample files</a>.
                                     </p>
                                 </div>
                                 <div class="col-md-12 mb-2">
